Fixed social icon spacing

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -40,6 +40,8 @@ footer {
     list-style: none;
     display: block;
     text-align: center;
+    padding: 0;
+    margin: 1rem 0;
     li {
       display: inline;
       a:link,
